--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
     <link rel="stylesheet" href="./style.css">
 
 </head>
-<body onload="onload()">
+<body>
     <section class="header">
-        BestellApp
+        <img class="headerLogo" src="assets/icons/logo/Logo.png">
     </section>
     <section class="contentTotal">
         <div class="contentRestaurant">
+            <img class="contentRestaurantImage" src="assets/img/pizzaRestaurant.jpg">
             <div class="contentRestaurantHead">
+                
             </div>
             <div class="contentRestaurantTitelbox">
-                <h1>xyz</h1>
+                <h1>Pizzaria da Maldini</h1>
                 <div class="restaurantRating">Bewertung (4,2 von 5 Sternen)</div>
             </div>
             <div class="contentRestaurantNavbar"></div>
@@ -38,7 +40,7 @@
         <div id="basketResponsive" class="basketResponsive basketResponsiveOpen">
         </div>
     </section>
-    <section class="footer"> ...Footerinhalt...   
+    <section class="footer"> ...footersection...   
     </section>
 </body>
 </html>
