--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <div class="contentRestaurantHead">    
             </div>
             <div class="contentRestaurantTitelbox">
-                <h1>Pizzaria da Maldini</h1>
-                <div class="restaurantRating">Bewertung (4,2 von 5 Sternen)</div>
+                <h1>Pizzeria da Nika</h1>
+                <div class="restaurantRating">Bewertung (4,3 von 5 Sternen)</div>
             </div>
             <div class="contentRestaurantNavbar">
                 <a href="#pizza" class="nav-link">Pizza</a>
