--- a/index.html
+++ b/index.html
@@ -30,21 +30,14 @@
                 <div class="restaurantRating">Bewertung (4,3 von 5 Sternen)</div>
             </div>
             <div class="contentRestaurantNavbar">
-                <a href="#pizza" class="nav-link">Pizza</a>
-                <a href="#pasta" class="nav-link">Pasta</a>
+                <a href="#pizza" class="nav-link" onclick="showSection('pizza')">Pizza</a>
+                <a href="#pasta" class="nav-link" onclick="showSection('pasta')">Pasta</a>
             </div>
-                <div class="contentRestaurantCategoryPizza">
-                    <h2>Pizza</h2>
-                    <img class="contentCategoryPizzaImg" src="assets/img/pizza.jpg" alt="pizza">
-                    <div id="pizza">
-                    </div>
+                <div class="contentRestaurantCategory hidden" id="pizza">
                 </div>
-                <div class="contentRestaurantCategoryPasta">
-                    <h2>Pasta</h2>
-                    <img class="contentCategoryPastaImg" src="assets/img/pasta.jpg" alt="pasta">
-                    <div id="pasta">
-                    </div>
+                <div class="contentRestaurantCategory hidden" id="pasta">    
                 </div>
+            </div>
         </div>    
         <div class="basketStickyrail">
             <div class="basket"><h1>Warenkorb</h1></div>
