--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
             <div id="basketResponsive" class="basketResponsive basketResponsiveOpen">
             </div>
         </section>
-        <section class="footer"> ...footersection...   
+        <section class="footer">
+            <h2>Über Uns</h2>
+            <p>Wir bieten die besten italienischen Gerichte und liefern sie direkt zu Ihnen nach Hause.</p>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Pizzeria da Nika. Alle Rechte vorbehalten.</p>
+            </div>
         </section>
+        
 </body>
 </html>
