--- a/index.html
+++ b/index.html
@@ -14,50 +14,49 @@
     <link rel="stylesheet" href="./styles/assets.css">
     <link rel="stylesheet" href="./styles/basket.css">
     <link rel="stylesheet" href="./style.css">
-
 </head>
 <body onload="init()">
-        <section class="header">
-            <img class="headerLogo" src="assets/icons/logo/Logo.png">
-        </section>
-        <section class="contentTotal">
-            <div class="contentRestaurant">
-                <div class="image-wrapper">
-                    <img class="contentRestaurantImage" src="assets/img/pizzaRestaurant.jpg" alt="bildDesPizzaRestaurant">
-                    <img class="companyIcon" src="assets/icons/logo/companyIcon.png" alt="companyIcon">
-                </div>
-                <div class="contentRestaurantHead">    
-                </div>
-                <div class="contentRestaurantTitelbox">
-                    <h1>Pizzeria da Nika</h1>
-                    <div class="restaurantRating">Bewertung (4,3 von 5 Sternen)</div>
-                </div>
-                <div class="contentRestaurantNavbar">
-                    <a href="#pizza" class="nav-link" onclick="toggleSection('pizza')">Pizza</a>
-                    <a href="#pasta" class="nav-link" onclick="toggleSection('pasta')">Pasta</a>
-                    <a href="#dessert" class="nav-link" onclick="toggleSection('dessert')">Dessert</a>
-                </div>
-                    <div class="contentRestaurantCategory hidden" id="pizza">
-                    </div>
-                    <div class="contentRestaurantCategory hidden" id="pasta">    
-                    </div>
-                    <div class="contentRestaurantCategory hidden" id="dessert">    
-                    </div>
-                </div>
-            </div>    
-            <div class="basketStickyrail">
-                <div class="basket"><h1>Warenkorb</h1></div>
+    <section class="header">
+        <img class="headerLogo" src="assets/icons/logo/Logo.png">
+    </section>
+    <section class="contentTotal">
+        <div class="contentRestaurant">
+            <div class="image-wrapper">
+                <img class="contentRestaurantImage" src="assets/img/pizzaRestaurant.jpg" alt="bildDesPizzaRestaurant">
+                <img class="companyIcon" src="assets/icons/logo/companyIcon.png" alt="companyIcon">
             </div>
-            <div id="basketResponsive" class="basketResponsive basketResponsiveOpen">
+            <div class="contentRestaurantHead">    
             </div>
-        </section>
-        <section class="footer">
-            <h2>Über Uns</h2>
-            <p>Wir bieten die besten italienischen Gerichte und liefern sie direkt zu Ihnen nach Hause.</p>
-            <div class="footer-bottom">
-                <p>&copy; 2024 Pizzeria da Nika. Alle Rechte vorbehalten.</p>
+            <div class="contentRestaurantTitelbox">
+                <h1>Pizzeria da Nika</h1>
+                <div class="restaurantRating">Bewertung (4,3 von 5 Sternen)</div>
             </div>
-        </section>
-        
+            <div class="contentRestaurantNavbar">
+                <a href="#pizza" class="nav-link" onclick="toggleSection('pizza')">Pizza</a>
+                <a href="#pasta" class="nav-link" onclick="toggleSection('pasta')">Pasta</a>
+                <a href="#dessert" class="nav-link" onclick="toggleSection('dessert')">Dessert</a>
+            </div>
+            <div class="contentRestaurantCategory hidden" id="pizza">
+            </div>
+            <div class="contentRestaurantCategory hidden" id="pasta">    
+            </div>
+            <div class="contentRestaurantCategory hidden" id="dessert">    
+            </div>
+        </div>
+        <div class="basketStickyrail">
+            <div class="basket"><h1>Warenkorb</h1></div>
+        </div>
+        <div id="basketResponsive" class="basketResponsive">
+            <!-- Mobiler Warenkorb-Inhalt wird hier gerendert -->
+        </div>
+        <button id="mobileBasketButton" class="mobileBasketButton" onclick="toggleMobileBasket()">Warenkorb anzeigen (€0.00)</button>
+    </section>
+    <section class="footer">
+        <h2>Über Uns</h2>
+        <p>Wir bieten die besten italienischen Gerichte und liefern sie direkt zu Ihnen nach Hause.</p>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Pizzeria da Nika. Alle Rechte vorbehalten.</p>
+        </div>
+    </section>
 </body>
 </html>
