--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
             </div>
         </div>
         <div class="basketStickyrail">
-            <div class="basket"><h1>Warenkorb</h1></div>
+            <div class="basket"><h1>Warenkorb</h1>
+            </div>
         </div>
-        <div id="basketResponsive" class="basketResponsive">
-            <!-- Mobiler Warenkorb-Inhalt wird hier gerendert -->
-        </div>
-        <button id="mobileBasketButton" class="mobileBasketButton" onclick="toggleMobileBasket()">Warenkorb anzeigen (€0.00)</button>
+    <div id="basketResponsive" class="basketResponsive">
+        <!-- Mobiler Warenkorb-Inhalt wird hier gerendert -->
+    </div>
+    <button id="mobileBasketButton" class="mobileBasketButton" onclick="toggleMobileBasket()">Warenkorb anzeigen (€0.00)</button>
     </section>
     <section class="footer">
         <h2>Über Uns</h2>
