checked camelCase and redesign

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </section>
     <section class="contentTotal">
         <div class="contentRestaurant">
-            <div class="image-wrapper">
+            <div class="imageWrapper">
                 <img class="contentRestaurantImage" src="assets/img/pizzaRestaurant.jpg" alt="bildDesPizzaRestaurant">
                 <img class="companyIcon" src="assets/icons/logo/companyIcon.png" alt="companyIcon">
             </div>
@@ -55,7 +55,7 @@
     <section class="footer">
         <h2>Über Uns</h2>
         <p>Wir bieten die besten italienischen Gerichte und liefern sie direkt zu Ihnen nach Hause.</p>
-        <div class="footer-bottom">
+        <div class="footerBottom">
             <p>&copy; 2024 Pizzeria da Nika. Alle Rechte vorbehalten.</p>
         </div>
     </section>
