--- a/index.html
+++ b/index.html
@@ -47,10 +47,7 @@
             <div class="basket"><h1>Warenkorb</h1>
             </div>
         </div>
-    <div id="basketResponsive" class="basketResponsive">
-        <!-- Mobiler Warenkorb-Inhalt wird hier gerendert -->
-    </div>
-    <button id="mobileBasketButton" class="mobileBasketButton" onclick="toggleMobileBasket()">Warenkorb anzeigen (€0.00)</button>
+    <button class="mobileBasketButton" onclick="toggleMobileBasket()">Warenkorb anzeigen</button>
     </section>
     <section class="footer">
         <h2>Über Uns</h2>
