--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <img class="headerLogo" src="assets/icons/logo/Logo.png">
     </section>
     <section class="contentTotal">
+        <!-- Restaurant Content -->
         <div class="contentRestaurant">
             <div class="imageWrapper">
                 <img class="contentRestaurantImage" src="assets/img/pizzaRestaurant.jpg" alt="bildDesPizzaRestaurant">
@@ -43,12 +44,18 @@
             <div class="contentRestaurantCategory hidden" id="dessert">    
             </div>
         </div>
-        <div class="basketStickyrail">
-            <div class="basket"><h1>Warenkorb</h1>
+        
+        <!-- Basket Section (Standardmäßig sichtbar) -->
+        <div class="basketStickyrail" id="basketSection">
+            <div class="basket">
+                <h1>Warenkorb</h1>
             </div>
         </div>
-    <button class="mobileBasketButton" onclick="toggleMobileBasket()">Warenkorb anzeigen</button>
+
+        <!-- Mobile Basket Button (Nur sichtbar bei < 920px) -->
+        <button class="mobileBasketButton" onclick="toggleMobileBasket()">Warenkorb anzeigen</button>
     </section>
+
     <section class="footer">
         <h2>Über Uns</h2>
         <p>Wir bieten die besten italienischen Gerichte und liefern sie direkt zu Ihnen nach Hause.</p>
@@ -58,3 +65,4 @@
     </section>
 </body>
 </html>
+
