--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon/favicon-16x16.png">
     <title>BestellApp</title>
 
     <script src="./scripts/db.js"></script>
